@@ -5,6 +5,8 @@ version 0.6.3 - xx-Jan-2009
  . CocosNode: fixed absolutePosition (issue #140)
  . CocosNode: unschedule timers only when running (issue #142)
  . CocosNode: prevents crash under certain circumstances while executing actions (issue #141)
+ . Demos: SpritesDemo has an improved Accelerate example (issue #168)
+ . Demos: ParticlesDemo has the Rain Particle example (issue #136)
  . Director: allow cleanup when deallocing the director (issue #144)
  . Director: avoid useless GL commands when displaying FPS (issue #162)
  . Menu: MenuItemToggle supports assigning the selectedIndex (issue #152)
